@@ -1,18 +1,24 @@
 package com.greenhouse.backend.farm.application.structure;
 
+import com.greenhouse.backend.common.config.TimeConfig;
 import com.greenhouse.backend.common.exception.NotFoundException;
+import com.greenhouse.backend.farm.domain.orchid.OrchidGroup;
+import com.greenhouse.backend.farm.domain.structure.BedZone;
+import com.greenhouse.backend.farm.domain.structure.PhysicalBed;
+import com.greenhouse.backend.farm.dto.orchid.OrchidGroupResponse;
 import com.greenhouse.backend.farm.dto.structure.BedZoneResponse;
 import com.greenhouse.backend.farm.dto.structure.HouseResponse;
-import com.greenhouse.backend.farm.dto.orchid.OrchidGroupResponse;
 import com.greenhouse.backend.farm.dto.structure.PhysicalBedResponse;
+import com.greenhouse.backend.farm.repository.orchid.OrchidGroupRepository;
 import com.greenhouse.backend.farm.repository.structure.BedZoneRepository;
 import com.greenhouse.backend.farm.repository.structure.HouseRepository;
-import com.greenhouse.backend.farm.repository.orchid.OrchidGroupRepository;
 import com.greenhouse.backend.farm.repository.structure.PhysicalBedRepository;
-
-import lombok.RequiredArgsConstructor;
-
+import java.time.Clock;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -21,67 +27,96 @@ import org.springframework.transaction.annotation.Transactional;
 @RequiredArgsConstructor
 public class FarmQueryService {
 
+	private final Clock clock;
+
 	private final HouseRepository houseRepository;
+
 	private final PhysicalBedRepository physicalBedRepository;
+
 	private final BedZoneRepository bedZoneRepository;
+
 	private final OrchidGroupRepository orchidGroupRepository;
 
 	public List<HouseResponse> getHouses() {
-		return houseRepository.findAll().stream()
-				.sorted((a, b) -> a.getNumber().compareTo(b.getNumber()))
-				.map(HouseResponse::from)
-				.toList();
+		var businessDate = TimeConfig.farmToday(clock);
+		var houses = houseRepository.findAll();
+		var beds = physicalBedRepository.findAllInFarmOrder();
+		var groups = groupsByZone(beds.stream().map(PhysicalBed::getId).toList());
+		var bedsByHouse = beds.stream().collect(Collectors.groupingBy(bed -> bed.getHouse().getId()));
+		return houses.stream()
+			.sorted(java.util.Comparator.comparing(house -> house.getNumber()))
+			.map(house -> HouseResponse.from(house,
+					bedsByHouse.getOrDefault(house.getId(), List.of())
+						.stream()
+						.map(bed -> PhysicalBedResponse.from(bed, groups, businessDate))
+						.toList()))
+			.toList();
 	}
 
 	public HouseResponse getHouse(Long houseId) {
-		return houseRepository.findWithPhysicalBedsById(houseId)
-				.map(HouseResponse::from)
-				.orElseThrow(() -> new NotFoundException("동을 찾을 수 없습니다."));
+		var house = houseRepository.findById(houseId).orElseThrow(() -> new NotFoundException("동을 찾을 수 없습니다."));
+		return HouseResponse.from(house, getPhysicalBeds(houseId));
 	}
 
 	public List<PhysicalBedResponse> getPhysicalBeds(Long houseId) {
-		return physicalBedRepository.findByHouseIdOrderByDisplayOrderAsc(houseId).stream()
-				.map(PhysicalBedResponse::from)
-				.toList();
+		var businessDate = TimeConfig.farmToday(clock);
+		var beds = physicalBedRepository.findByHouseIdOrderByDisplayOrderAsc(houseId);
+		var groups = groupsByZone(beds.stream().map(PhysicalBed::getId).toList());
+		return beds.stream().map(bed -> PhysicalBedResponse.from(bed, groups, businessDate)).toList();
 	}
 
 	public PhysicalBedResponse getPhysicalBed(Long physicalBedId) {
-		return physicalBedRepository.findWithHouseAndBedZonesById(physicalBedId)
-				.map(PhysicalBedResponse::from)
-				.orElseThrow(() -> new NotFoundException("다이를 찾을 수 없습니다."));
+		var businessDate = TimeConfig.farmToday(clock);
+		var bed = physicalBedRepository.findWithHouseAndBedZonesById(physicalBedId)
+			.orElseThrow(() -> new NotFoundException("다이를 찾을 수 없습니다."));
+		return PhysicalBedResponse.from(bed, groupsByZone(List.of(physicalBedId)), businessDate);
 	}
 
 	public List<BedZoneResponse> getBedZones(Long houseId, Long physicalBedId) {
+		var businessDate = TimeConfig.farmToday(clock);
+		List<BedZone> zones;
 		if (physicalBedId != null) {
-			return bedZoneRepository.findByPhysicalBedIdOrderBySortOrderAsc(physicalBedId).stream()
-					.map(BedZoneResponse::from)
-					.toList();
+			zones = bedZoneRepository.findByPhysicalBedIdOrderBySortOrderAsc(physicalBedId);
 		}
-		if (houseId != null) {
-			return bedZoneRepository.findByHouseId(houseId).stream()
-					.map(BedZoneResponse::from)
-					.toList();
+		else if (houseId != null) {
+			zones = bedZoneRepository.findByHouseId(houseId);
 		}
-		return bedZoneRepository.findAll().stream()
-				.map(BedZoneResponse::from)
-				.toList();
+		else {
+			zones = bedZoneRepository.findAllWithLocation();
+		}
+		var groups = groupsByZone(zones.stream().map(zone -> zone.getPhysicalBed().getId()).distinct().toList());
+		return zones.stream()
+			.map(zone -> BedZoneResponse.from(zone, groups.getOrDefault(zone.getId(), List.of()), businessDate))
+			.toList();
 	}
 
 	public BedZoneResponse getBedZone(Long bedZoneId) {
-		return bedZoneRepository.findWithDetailsById(bedZoneId)
-				.map(BedZoneResponse::from)
-				.orElseThrow(() -> new NotFoundException("논리 구역을 찾을 수 없습니다."));
+		var businessDate = TimeConfig.farmToday(clock);
+		var zone = bedZoneRepository.findWithLocationById(bedZoneId)
+			.orElseThrow(() -> new NotFoundException("논리 구역을 찾을 수 없습니다."));
+		return BedZoneResponse.from(zone,
+				groupsByZone(List.of(zone.getPhysicalBed().getId())).getOrDefault(zone.getId(), List.of()),
+				businessDate);
 	}
 
-	public List<OrchidGroupResponse> getOrchidGroups(
-			Long houseId,
-			String keyword,
-			Long physicalBedId,
-			Long bedZoneId,
-			String status) {
-		return orchidGroupRepository
-				.search(houseId, keyword == null ? "" : keyword.trim(), physicalBedId, bedZoneId, status).stream()
-				.map(OrchidGroupResponse::from)
-				.toList();
+	private Map<Long, List<OrchidGroup>> groupsByZone(List<Long> bedIds) {
+		if (bedIds.isEmpty()) {
+			return Map.of();
+		}
+		return orchidGroupRepository.findByPhysicalBedIdInOrderByLocation(bedIds)
+			.stream()
+			.collect(Collectors.groupingBy(group -> group.getBedZone().getId(), LinkedHashMap::new,
+					Collectors.toList()));
 	}
+
+	public List<OrchidGroupResponse> getOrchidGroups(Long houseId, String keyword, Long physicalBedId, Long bedZoneId,
+			String status) {
+		var businessDate = TimeConfig.farmToday(clock);
+		return orchidGroupRepository
+			.search(houseId, keyword == null ? "" : keyword.trim(), physicalBedId, bedZoneId, status)
+			.stream()
+			.map(group -> OrchidGroupResponse.from(group, businessDate))
+			.toList();
+	}
+
 }
